tests/snapshots/execution_spec__js_request-to-js-runtime.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Post {
  body: String
  id: Int
  title: String
}

type Query {
  posts: [Post]
}

schema {
  query: Query
}
