tests/snapshots/execution_spec__jsonplaceholder-call-post.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "title": "title1",
          "user": {
            "name": "Leanne Graham"
          }
        }
      ]
    }
  }
}
