tests/snapshots/execution_spec__jsonplaceholder-call-post.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(graphiql: true, hostname: "0.0.0.0", port: 8000) @upstream(baseURL: "http://jsonplaceholder.typicode.com", batch: {delay: 100, maxSize: 100}, httpCache: true) {
  query: Query
}

type Post {
  id: Int!
  title: String!
  user: User @call(steps: [{query: "user", args: {id: "{{value.userId}}"}}])
  userId: Int!
}

type Query {
  posts: [Post] @http(path: "/posts")
  user(id: Int!): User @http(path: "/users/{{args.id}}")
  users: [User] @http(path: "/users")
}

type User {
  id: Int!
  name: String!
}
