tests/snapshots/execution_spec__lint-schema.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Post {
  Title: String!
  body: String!
  id: Int!
  user: user
  userId: Int!
}

type Query {
  posts: [Post]
}

scalar Url

type user {
  id: Int!
  name: String!
}

schema {
  query: Query
}
