tests/snapshots/execution_spec__lint-schema.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(graphiql: true, hostname: "0.0.0.0", port: 8000, lint: {autoFix: true, enum: "Pascal", enumValue: "ScreamingSnake", field: "Camel", type: "Pascal"}) @upstream(baseURL: "http://jsonplaceholder.typicode.com", httpCache: true) {
  query: Query
}

enum objectType {
  FOUR
  THREE
  TWO
  one
}

type Post {
  Title: String!
  body: String!
  id: Int!
  user: user @http(path: "/users/{{value.userId}}")
  userId: Int!
}

type Query {
  posts: [Post] @http(path: "/posts")
}

type user {
  id: Int!
  name: String!
}
