tests/snapshots/execution_spec__modified-field.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  user: User
}

scalar Url

type User {
  fullname: String
}

schema {
  query: Query
}
